@@ -9,6 +9,11 @@ BC breaks:
   App::useFileAnnotationCache() method, it expects a path to the annotation cache
   file. See also updated documentation about annotation cache at
   https://github.com/stubbles/stubbles-core/wiki/Annotations#annotation-cache
+- Removed vendor/bin/clearCache. Due to changed annotation cache a generic
+  mechanism for clearing the cache can't be provided any longer, applications
+  have to implement their own solution.
+- Removed support for post-install-cmd and post-update-cmd. You should remove
+  any such entries in your composer.json.
 
 
 2.1.3, 2012-12-28
